# inventory-md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  Makefile  README.md  TODO.md  pyproject.toml  tag-mapping.json
.github/workflows/: publish.yaml  tests.yml
claude-skills/: README.md  process-inventory-photos.md  process-lidl-shopping.md  process-shopping.md  suggest-recipe.md
docs/: ADDING-ITEMS.md  CACHES.md  CATEGORIES.md  CODE-REVIEW.md  DATA_DESIGN.md  INSTALLATION.md  MAINTENANCE.md  TODO-CATEGORIES.md  TODO.md  category-lookup-workflow.md  code-review-2026-03-04.md  code-review-2026-05-08.md  code-review-2026-06-11.md  comparison-with-other-systems.md  open-prices-integration.md  qr-labels-plan.md  shopping-pipeline-issues-2026-06-07.md  shopping-workflow-redesign-2026-06-06.md  tmp-prompt
example/: .gitignore  inventory.json  inventory.md  vocabulary.json
hooks/: post-receive.template
scripts/: README.md  analyze_inventory.py  bb_dates.py  check_quality.py  export_tags.py  extract_barcodes.py  find_expiring_food.py  find_expiring_items.py  generate_shopping_list.py  inventory_import.py  ledger.py  lookup_items.py  migrate-tags.py  off_upload.py  op_auth.py  openprices_publish.py  pipeline.py  release.sh  shop_import.py  shopping_context.py  staging.py  sync_eans_to_inventory.py  tingbok_push.py
src/inventory_md/: __init__.py  additem.py  api_server.py  cli.py  config.py  labels.py  md_adapter.py  off.py  parser.py  photo_registry.py  queries.py  shopping_list.py  skos.py  vocabulary.py
src/inventory_md/data/: vocabulary.yaml
src/inventory_system/: api_server.py  chat_server.py  cli.py  parser.py  shopping_list.py
systemd/: furuset.conf.example  inventory-api@.service  inventory-chat.service  inventory-chat@.service  inventory-web.service  inventory-web@.service  solveig.conf.example
tests/: conftest.py  test_additem.py  test_api_server.py  test_bb_dates.py  test_check_quality.py  test_cli.py  test_config.py  test_extract_barcodes.py  test_extract_barcodes_importable.py  test_find_expiring_items.py  test_inventory_import.py  test_labels.py  test_ledger.py  test_md_adapter.py  test_off.py  test_off_upload.py  test_openprices_publish.py  test_parser.py  test_photo_registry.py  test_pipeline.py  test_queries.py  test_shop_import.py  test_shopping_context.py  test_shopping_list.py  test_skos.py  test_staging.py  test_sync_eans_to_inventory.py  test_tingbok_push.py  test_vocabulary.py
(+4 files in other folders)
