[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inventory-md"
dynamic = ["version"]
description = "A flexible markdown-based inventory management system"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Tobias Brox", email = "tobias@tobixen.no"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Home Automation",
    "Topic :: Database",
]
dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
chat = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "anthropic>=0.39.0",
    "python-multipart>=0.0.6",
]
barcode = [
    "pyzbar",
]
ocr = [
    "easyocr>=1.7.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[project.scripts]
inventory-md = "inventory_md.cli:main"

[project.urls]
Repository = "https://github.com/tobixen/inventory-md"
Issues = "https://github.com/tobixen/inventory-md/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/inventory_md/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/example",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inventory_md"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]
ignore = ["E501"]  # Line length handled separately

[tool.ruff.lint.isort]
known-first-party = ["inventory_md"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["PT011", "PT006"]  # Allow broad pytest.raises and string parametrize
"scripts/*.py" = ["T201"]  # Allow print in scripts
"src/inventory_md/api_server.py" = ["B008"]  # FastAPI uses function calls in defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Don't collect from scripts/ which has optional dependencies
collect_ignore = ["scripts"]
